* Fixed the order_by and order parameters in Groups_Group::get_groups()
* Added the $create parameter in Groups_UIE::render_select()
* Removed the "Chosen" library.
* Improved and reduced the footprint on the Users admin screen, now allowing to filter by one or multiple groups.
* Added a welcome screen.

= 1.13.1 =
* Fixed an issue where the wrong post count would be produced for statuses that do not represent a valid WooCommerce order status.
* Added support for post counts with WooCommerce Subscriptions.

= 1.13.0 =
* Added a filter on wp_count_posts.

= 1.12.0 =
* Fixed an issue where resource paths were not correct with customized WP_CONTENT_DIR, WP_CONTENT_URL, WP_PLUGIN_DIR and WP_PLUGIN_URL.

= 1.11.3 =
* Updated the Spanish translation.

= 1.11.2 =
* Updated the translation template.
* Updated the German translation.
* Moved the complete changelog out to changelog.txt.

= 1.11.1 =
* Fixed the order_by and order parameters in Groups_Group::get_groups()

= 1.11.0 =
* Added the Brazilian Portuguese translation.

= 1.10.3 =
* Added the groups_access_restrictions_capability_selected filter.

= 1.10.2 =
* Tested for WordPress 4.5.

= 1.10.1 =
* Fixed the French translation which introduced incorrect markup breaking the help button.
* Added the groups_admin_groups_add_form_after_fields filter.
* Added the groups_admin_groups_add_submit_success action.
* Added the groups_admin_groups_edit_form_after_fields filter.
* Added the groups_admin_groups_edit_submit_success action.
* Fixed some code formatting (tabs).

= 1.10.0 =
* Adjusted the Groups and Capabilities screens' UI elements.
* Reduced the filters section footprint on the Groups screen.
* Reduced the filters section footprint on the Capabilities screen.
* Fixed use of deprecated constructor in the Groups_Pagination class.
* Fixed sorting by description and the sorting indicator on the Groups screen.
* Fixed sorting by description and the sorting indicator on the Capabilities screen.