@@ -9,6 +9,7 @@
 * Removed the "Chosen" library.
 * Improved and reduced the footprint on the Users admin screen, now allowing to filter by one or multiple groups.
 * Added a welcome screen.
+* When creating a new user account from the dashboard, the groups can be assigned directly.
 
 = 1.13.1 =
 * Fixed an issue where the wrong post count would be produced for statuses that do not represent a valid WooCommerce order status.
